# glacier-settings-accounts

./: CMakeLists.txt  CreateAccountSheet.qml  accountssettingsplugin.h  transifex.yml
providers/: CMakeLists.txt
providers/email/: CMakeLists.txt
providers/google/: CMakeLists.txt  google-calendars.service  google-contacts.service  google-gmail.service  google-sync.service
providers/google/qml/: AccountSetup.qml  google.qml
providers/google/src/: googleauth.cpp  googleauth.h  plugin.cpp
providers/jabber/: CMakeLists.txt  jabber.provider
qml/plugins/accounts/: accounts.js  accounts.qml
service_types/: CMakeLists.txt  IM.service-type  caldav.service-type  carddav.service-type  e-mail.service-type  sharing.service-type  storage.service-type  store.service-type  sync.service-type
src/: CMakeLists.txt  CreateAccountSheet.qml  accountssettingsplugin.cpp
src/translations/: accounts.ts  accounts_cs.ts
translations/: accounts.ts  accounts_pl.ts  accounts_ru.ts  glacier-settings-accounts_de.ts  glacier-settings-accounts_ru.ts
